--- a/Frontend/Web/src/General-Components/Footer/Footer.css
+++ b/Frontend/Web/src/General-Components/Footer/Footer.css
@@ -6,7 +6,7 @@ footer {
     text-align: center;
     width: 100%;
     margin: auto;
-    margin-top: 400px; 
+    /* margin-top: 400px;  */
   }
   
   .footer-container {
