--- a/Frontend/Web/src/HomePage/HomePage.css
+++ b/Frontend/Web/src/HomePage/HomePage.css
@@ -15,6 +15,7 @@
     /* background-color: cadetblue; */
     display: flex;
     justify-content: center;
+    flex-direction: column;
     /* align-items: center; */
 
     
