--- a/Frontend/Web/src/HomePage/AboutUs/AboutUs.module.css
+++ b/Frontend/Web/src/HomePage/AboutUs/AboutUs.module.css
@@ -6,7 +6,9 @@
     text-align: center;
     position: relative;
     overflow: hidden;
+    
     margin-top: 50px;
+    
   }
   
   .row {
@@ -14,6 +16,8 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
+    /* background-color: red; */
+    
   }
   
   .StatisticsDescription {
@@ -24,6 +28,7 @@
     gap: 20px;
     position: relative;
     z-index: 1;
+    
   }
   
   .highlight {
