--- a/Frontend/Web/src/General-Components/Messages/ChatSystem.css
+++ b/Frontend/Web/src/General-Components/Messages/ChatSystem.css
@@ -2,11 +2,12 @@
 .chat-system {
     display: grid;
     grid-template-columns: 25% 75%;
-    height: 800px;
-    gap: 15px;
+    height: 830px;
+    max-height: 830px;
+    gap: 10px;
     background: #f9fdfc;
     font-family: Arial, sans-serif;
-    margin: 30px;
+    margin: 20px;    
   }
   
   .friends-list {
@@ -14,6 +15,20 @@
     background: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+
+  .friends-list {
+    overflow-y: auto;
+    max-height: 100%; 
+  }
+
+  .friends-list::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  .friends-list::-webkit-scrollbar-thumb {
+    background-color: #6dc97e;
+    /* border-radius: 10px; */
   }
   
   .friends-list h3 {
@@ -58,6 +73,7 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 15px;
+    overflow-y: auto;
   }
   
   .chat-window {
@@ -89,31 +105,31 @@
     color: #333;
     font-weight: 600;
   }
+
+
   
   .messages-list {
-    /* flex-grow: 1; */
-    /* overflow-y: auto; */
-    margin-bottom: 20px;
-    padding-right: 10px;
+    /* flex-grow: 1; Take remaining space */
+    overflow-y: auto; /* Enable scrolling */
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #f9f9f9;
+    /* border: 1px solid #ddd; */
+    max-height: 550px; 
+    height: 550px;
     display: flex;
     flex-direction: column; 
-    justify-content: flex-end;
-    height: 100%;
+    /* justify-content: flex-end; */
+
   }
   .messages-list::-webkit-scrollbar {
-    width: 8px;
+    width: 12px;
   }
   
   .messages-list::-webkit-scrollbar-thumb {
     background-color: #6dc97e;
-    border-radius: 10px;
+    /* border-radius: 10px; */
   }
-  
-  .friends-list {
-    overflow-y: auto;
-    max-height: 100%; 
-  }
-  
   .message {
     display: flex;
     align-items: flex-start;
@@ -126,8 +142,9 @@
   }
   
   .message.bot {
-    flex-direction: c;
+    flex-direction: row;
     align-items: flex-start;
+    
   }
   
   .message-avatar {
@@ -138,7 +155,7 @@
   }
   
   .message-text {
-    background: #e0f7e9;
+    background: #e5e7e9;
     padding: 12px;
     border-radius: 10px;
     max-width: 75%;
@@ -146,7 +163,7 @@
   }
   
   .message.bot .message-text {
-    background: #f1f1f1;
+    background: #e5e7e9;
   }
   
   .message.user .message-text {
@@ -199,6 +216,7 @@
     background: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+
   }
   
   .info-header {
