--- a/Frontend/Web/src/General-Components/Settings/Settings.css
+++ b/Frontend/Web/src/General-Components/Settings/Settings.css
@@ -4,6 +4,8 @@
   min-height: 100vh;
   background-color: #f8f9fa; /* Light background */
   font-family: 'Arial', sans-serif;
+  
+  /* height: 100vh; */
 }
 
 /* Content Section */
