--- a/Frontend/Web/src/General-Components/Footer/Footer.css
+++ b/Frontend/Web/src/General-Components/Footer/Footer.css
@@ -1,12 +1,13 @@
 
 footer {
     background-color: #282c34;
+    background-color: rgb(44, 44, 44);
     color: white;
     padding: 20px 0;
     text-align: center;
     width: 100%;
     margin: auto;
-    margin-top: 100px; 
+    /* margin-top: 100px;  */
     height: 400px;
     z-index: 999;
     
